@@ -4,10 +4,10 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,6 +18,11 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import com.nomorelaps.adapters.out.persistence.interfaces.INotificationPersistenceAdapter;
 import com.nomorelaps.domain.models.Notification;
 
+/**
+ * Unit tests for NotificationService.
+ * Verifies business logic for notifications, including read status management
+ * and creation defaults.
+ */
 @ExtendWith(MockitoExtension.class)
 class NotificationServiceTest {
 
@@ -27,56 +32,76 @@ class NotificationServiceTest {
     @InjectMocks
     private NotificationService notificationService;
 
-    @Test
-    @DisplayName("markAsRead - Should set isRead to true and save")
-    void shouldMarkAsRead() {
-        Notification notification = new Notification();
-        notification.setId(1L);
-        notification.setIsRead(false);
+    private Notification testNotification;
 
-        when(persistencePort.findById(1L)).thenReturn(Optional.of(notification));
+    @BeforeEach
+    void setUp() {
+        testNotification = new Notification();
+        testNotification.setId(1L);
+        testNotification.setIsRead(false);
+        testNotification.setMessage("Test Alert");
+    }
+
+    @Test
+    @DisplayName("create - Should set createdAt if null and save")
+    void shouldCreateWithTimestamp() {
+        testNotification.setCreatedAt(null);
+        when(persistencePort.save(any(Notification.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        Notification result = notificationService.create(testNotification);
+
+        assertNotNull(result.getCreatedAt());
+        verify(persistencePort).save(testNotification);
+    }
+
+    @Test
+    @DisplayName("markAsRead - Should update status to read")
+    void shouldMarkSingleAsRead() {
+        when(persistencePort.findById(1L)).thenReturn(Optional.of(testNotification));
         when(persistencePort.save(any(Notification.class))).thenAnswer(i -> i.getArguments()[0]);
 
         Notification result = notificationService.markAsRead(1L);
 
         assertTrue(result.getIsRead());
-        verify(persistencePort, times(1)).save(notification);
+        verify(persistencePort).save(testNotification);
     }
 
     @Test
-    @DisplayName("markAsRead - Should throw exception if not found")
-    void shouldThrowExceptionWhenNotificationNotFound() {
-        when(persistencePort.findById(1L)).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class, () -> notificationService.markAsRead(1L));
+    @DisplayName("markAsRead - Should throw exception if notification not found")
+    void shouldThrowIfNotFoundOnMark() {
+        when(persistencePort.findById(99L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> notificationService.markAsRead(99L));
     }
 
     @Test
-    @DisplayName("markAllAsRead - Should mark all company notifications as read")
-    void shouldMarkAllAsRead() {
-        Notification n1 = new Notification();
-        n1.setIsRead(false);
-        Notification n2 = new Notification();
-        n2.setIsRead(true);
-        Notification n3 = new Notification();
-        n3.setIsRead(false);
+    @DisplayName("markAllAsRead - Should update all unread notifications for company")
+    void shouldMarkAllUnreadAsRead() {
+        Notification n1 = new Notification(); n1.setIsRead(false);
+        Notification n2 = new Notification(); n2.setIsRead(true); // Already read
+        Notification n3 = new Notification(); n3.setIsRead(false);
 
-        List<Notification> list = Arrays.asList(n1, n2, n3);
-        when(persistencePort.findByCompanyId(10L)).thenReturn(list);
+        when(persistencePort.findByCompanyId(10L)).thenReturn(List.of(n1, n2, n3));
 
         notificationService.markAllAsRead(10L);
 
         assertTrue(n1.getIsRead());
         assertTrue(n2.getIsRead());
         assertTrue(n3.getIsRead());
-        verify(persistencePort, times(2)).save(any(Notification.class));
+        verify(persistencePort, times(2)).save(any(Notification.class)); // Only n1 and n3 were updated
     }
 
     @Test
-    @DisplayName("deleteById - Should call persistencePort")
+    @DisplayName("findByCompanyId - Should return notifications for company")
+    void shouldReturnNotificationsByCompanyId() {
+        when(persistencePort.findByCompanyId(10L)).thenReturn(List.of(testNotification));
+        List<Notification> result = notificationService.findByCompanyId(10L);
+        assertEquals(1, result.size());
+    }
+
+    @Test
+    @DisplayName("deleteById - Should call persistence port")
     void shouldDeleteById() {
-        doNothing().when(persistencePort).deleteById(1L);
         notificationService.deleteById(1L);
-        verify(persistencePort, times(1)).deleteById(1L);
+        verify(persistencePort).deleteById(1L);
     }
 }
