@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -20,10 +19,8 @@ import com.nomorelaps.adapters.out.persistence.interfaces.IRolePersistenceAdapte
 import com.nomorelaps.domain.models.Role;
 
 /**
- * Unit tests for RoleService covering all business methods.
- *
- * @author nexphernandez
- * @version 1.0.0
+ * Unit tests for RoleService.
+ * Verifies business logic for system roles management.
  */
 @ExtendWith(MockitoExtension.class)
 class RoleServiceTest {
@@ -40,77 +37,48 @@ class RoleServiceTest {
     void setUp() {
         testRole = new Role(1L);
         testRole.setName("ADMIN");
-        testRole.setDescription("Administrator role");
+        testRole.setDescription("System Administrator");
     }
 
-
     @Test
-    @DisplayName("create - Should delegate to persistence and return saved role")
+    @DisplayName("create - Should delegate to persistence port")
     void shouldCreateRole() {
         when(persistencePort.save(any(Role.class))).thenReturn(testRole);
-
         Role result = roleService.create(testRole);
-
         assertNotNull(result);
         assertEquals("ADMIN", result.getName());
         verify(persistencePort).save(testRole);
     }
 
-
     @Test
-    @DisplayName("findById - Should return role when found")
+    @DisplayName("findById - Should return role when present")
     void shouldFindRoleById() {
         when(persistencePort.findById(1L)).thenReturn(Optional.of(testRole));
-
         Optional<Role> result = roleService.findById(1L);
-
         assertTrue(result.isPresent());
         assertEquals("ADMIN", result.get().getName());
     }
 
     @Test
-    @DisplayName("findById - Should return empty when role not found")
-    void shouldReturnEmptyWhenRoleNotFound() {
+    @DisplayName("findById - Should return empty if not found")
+    void shouldReturnEmptyIfNotFound() {
         when(persistencePort.findById(99L)).thenReturn(Optional.empty());
-
         Optional<Role> result = roleService.findById(99L);
-
         assertFalse(result.isPresent());
     }
 
-
     @Test
     @DisplayName("findAll - Should return all roles")
-    void shouldFindAllRoles() {
-        Role user = new Role(2L);
-        user.setName("USER");
-        when(persistencePort.findAll()).thenReturn(Arrays.asList(testRole, user));
-
+    void shouldReturnAllRoles() {
+        when(persistencePort.findAll()).thenReturn(List.of(testRole));
         List<Role> result = roleService.findAll();
-
-        assertEquals(2, result.size());
-        assertEquals("ADMIN", result.get(0).getName());
-        assertEquals("USER", result.get(1).getName());
+        assertEquals(1, result.size());
     }
 
     @Test
-    @DisplayName("findAll - Should return empty list when no roles")
-    void shouldReturnEmptyListWhenNoRoles() {
-        when(persistencePort.findAll()).thenReturn(List.of());
-
-        List<Role> result = roleService.findAll();
-
-        assertTrue(result.isEmpty());
-    }
-
-
-    @Test
-    @DisplayName("deleteById - Should call persistence deleteById")
-    void shouldDeleteRoleById() {
-        doNothing().when(persistencePort).deleteById(1L);
-
+    @DisplayName("deleteById - Should delegate to persistence port")
+    void shouldDeleteRole() {
         roleService.deleteById(1L);
-
         verify(persistencePort).deleteById(1L);
     }
 }
